@@ -1,6 +1,7 @@
 0.9.92 (1.0.0 beta3):
 -Add: User defined command line arguments for lame
 -Add: User defined command to execute after a file has been converted
+-Add: Create action menus for the file manager
 -Change: Create temp files in the kde-user temp dir
 -Change: Remove partially converted files on abort or fail
 -Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
